# TorcheRegistrationFormNew

./: db.sqlite3  pyproject.toml
FormRegistration/: settings.py
FormRegistrationApp/: views.py
