[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
django-googledrive-storage = "^1.6.0"
xhtml2pdf = "^0.2.8"
discord-webhook = "^0.17.0"
[tool.poetry.dev-dependencies]
